force-app/main/default/objects/Order/fields/Check_in_Time__c.field-meta.xml
<CustomField>
    <fullName>Check_in_Time__c</fullName>
    <label>Check-in Time</label>
    <type>DateTime</type>
</CustomField>