force-app/main/default/objects/Order/fields/Container_Size__c.field-meta.xml
<CustomField>
    <fullName>Container_Size__c</fullName>
    <label>Container Size</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>