force-app/main/default/objects/Order/fields/Control_Authority__c.field-meta.xml
<CustomField>
    <fullName>Control_Authority__c</fullName>
    <label>Control Authority</label>
    <length>12</length>
    <type>Text</type>
</CustomField>