force-app/main/default/objects/Order/fields/County__c.field-meta.xml
<CustomField>
    <fullName>County__c</fullName>
    <label>County</label>
    <length>12</length>
    <required>true</required>
    <type>Text</type>
</CustomField>