force-app/main/default/objects/Order/fields/Current_Level__c.field-meta.xml
<CustomField>
    <fullName>Current_Level__c</fullName>
    <label>Current Level</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>