force-app/main/default/objects/Order/fields/Daily_Fill_Rate__c.field-meta.xml
<CustomField>
    <fullName>Daily_Fill_Rate__c</fullName>
    <label>Daily Fill Rate</label>
    <length>8</length>
    <required>true</required>
    <type>Text</type>
</CustomField>