force-app/main/default/objects/Order/fields/Driver_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Driver_Assigned__c</fullName>
    <label>Driver Assigned</label>
    <length>20</length>
    <type>Text</type>
</CustomField>