force-app/main/default/objects/Order/fields/Duration_In_Mins__c.field-meta.xml
<CustomField>
    <fullName>Duration_In_Mins__c</fullName>
    <label>Duration In Mins</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>