force-app/main/default/objects/Order/fields/Expected_Order_Date__c.field-meta.xml
<CustomField>
    <fullName>Expected_Order_Date__c</fullName>
    <label>Expected Order Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>