force-app/main/default/objects/Order/fields/Gallons_Per_Month__c.field-meta.xml
<CustomField>
    <fullName>Gallons_Per_Month__c</fullName>
    <label>Gallons Per Month</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>