force-app/main/default/objects/Order/fields/GRD_Size__c.field-meta.xml
<CustomField>
    <fullName>GRD_Size__c</fullName>
    <label>GRD Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>