force-app/main/default/objects/Order/fields/Key__c.field-meta.xml
<CustomField>
    <fullName>Key__c</fullName>
    <label>Key</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>