force-app/main/default/objects/Order/fields/Previous_Vendor__c.field-meta.xml
<CustomField>
    <fullName>Previous_Vendor__c</fullName>
    <label>Previous Vendor</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mahoney</fullName>
            </value>
            <value>
                <fullName>Oregon Oils</fullName>
            </value>
            <value>
                <fullName>DarPro</fullName>
            </value>
            <value>
                <fullName>Baker</fullName>
            </value>
            <value>
                <fullName>River City</fullName>
            </value>
            <value>
                <fullName>Scout</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>