force-app/main/default/objects/Order/fields/Pricing_Tier__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Tier__c</fullName>
    <label>Pricing Tier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Low ($125)($.41)</fullName>
            </value>
            <value>
                <fullName>Middle($135)($.46)</fullName>
            </value>
            <value>
                <fullName>High($225)($.49)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>