force-app/main/default/objects/Order/fields/Product_Service__c.field-meta.xml
<CustomField>
    <fullName>Product_Service__c</fullName>
    <label>Product Service</label>
    <length>15</length>
    <required>true</required>
    <type>Text</type>
</CustomField>