force-app/main/default/objects/Order/fields/Rate__c.field-meta.xml
<CustomField>
    <fullName>Rate__c</fullName>
    <label>Rate</label>
    <length>8</length>
    <required>true</required>
    <type>Text</type>
</CustomField>