force-app/main/default/objects/Order/fields/Recurrence_Rule__c.field-meta.xml
<CustomField>
    <fullName>Recurrence_Rule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Recurrence Rule</label>
    <referenceTo>Recurrence_Rule__c</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>