force-app/main/default/objects/Order/fields/Service_Notes__c.field-meta.xml
<CustomField>
    <fullName>Service_Notes__c</fullName>
    <label>Service Notes</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>