force-app/main/default/objects/Order/fields/Skills__c.field-meta.xml
<CustomField>
    <fullName>Skills__c</fullName>
    <label>Skills</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>GT</fullName>
            </value>
            <value>
                <fullName>INT</fullName>
            </value>
            <value>
                <fullName>HYD</fullName>
            </value>
            <value>
                <fullName>UCO Delivery</fullName>
            </value>
            <value>
                <fullName>UCO Swap</fullName>
            </value>
            <value>
                <fullName>Services</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>