force-app/main/default/objects/Order/fields/Sub_Zone__c.field-meta.xml
<CustomField>
    <fullName>Sub_Zone__c</fullName>
    <label>Sub Zone</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>VAN</fullName>
            </value>
            <value>
                <fullName>WS</fullName>
            </value>
            <value>
                <fullName>CLACK</fullName>
            </value>
            <value>
                <fullName>PDX-E</fullName>
            </value>
            <value>
                <fullName>PDX-N</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>