force-app/main/default/objects/Order/fields/Tags__c.field-meta.xml
<CustomField>
    <fullName>Tags__c</fullName>
    <label>Tags</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Account Issue</fullName>
            </value>
            <value>
                <fullName>Hard Oil</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>