force-app/main/default/objects/Order/fields/Third_Party__c.field-meta.xml
<CustomField>
    <fullName>Third_Party__c</fullName>
    <label>Third Party</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NO</fullName>
            </value>
            <value>
                <fullName>GNI</fullName>
            </value>
            <value>
                <fullName>SLS</fullName>
            </value>
            <value>
                <fullName>CB</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>