force-app/main/default/objects/Order/fields/Vehicle_features__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_features__c</fullName>
    <label>Vehicle features</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hydro-Jetter (HYD)</fullName>
            </value>
            <value>
                <fullName>Liftgate (LG)</fullName>
            </value>
            <value>
                <fullName>Portable Unit (P/U)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>